Fix scrollbar styles

--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,32 @@
     margin-bottom: 10px;
     text-align: justify
   }
+
+  ::-webkit-resizer {
+    background: transparent;
+  }
+  
+  ::-webkit-scrollbar-corner {
+    background-color: transparent;
+  }
+  
+  ::-webkit-scrollbar {
+    width: 8px;
+    background: transparent;
+  }
+  
+  ::-webkit-scrollbar-track {
+    border-radius: 8px;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    border-radius: 8px;
+    background-color: #6b3f22;
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: #6b3f22;
+  }
 }
 
 @layer components {
